fix(status_bar): code mime switcher is clipped

--- a/apps/client/src/widgets/layout/StatusBar.css
+++ b/apps/client/src/widgets/layout/StatusBar.css
@@ -90,6 +90,11 @@
                 padding: 0;
             }
         }
+
+        .dropdown-code-note-switcher {
+            max-height: 90vh;
+            overflow: scroll;
+        }
     }
 
     > .attribute-list {
